crates/vescpkg-sys/tests/ui/no_std_cannot_use_std.stderr
error[E0433]: cannot find module or crate `std` in this scope
 --> tests/ui/no_std_cannot_use_std.rs:3:5
  |
3 | use std::vec::Vec;
  |     ^^^ use of unresolved module or unlinked crate `std`
  |
  = help: if you wanted to use a crate named `std`, use `cargo add std` to add it to your `Cargo.toml`

error: `#[panic_handler]` function required, but not found

error: unwinding panics are not supported without std
  |
  = help: using nightly cargo, use -Zbuild-std with panic="abort" to avoid unwinding
  = note: since the core library is usually precompiled with panic="unwind", rebuilding your crate with panic="abort" may not be enough to fix the problem
